# cf-dyndns

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
cf_dyndns/: __init__.py  main.py
